--- a/TabLayoutDemo/app/src/main/res/layout/activity_main.xml
+++ b/TabLayoutDemo/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,19 @@
         android:id="@+id/view_pager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+        android:layout_gravity="bottom|center_horizontal"
+        android:id="@+id/dots_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:dotsColor="@color/md_white_1000"
+        app:dotsCornerRadius="8dp"
+        app:dotsSize="16dp"
+        app:dotsSpacing="4dp"
+        app:dotsWidthFactor="2.5"
+        app:progressMode="true"
+        app:selectedDotColor="@color/md_blue_200" />
+
     <include layout="@layout/content_main" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
